--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ log = "0.4"
 wgpu = "0.17"
 pollster = "0.3"
 bytemuck = { version = "1.13", features = [ "derive" ] }
+
+[dependencies.image]
+version = "0.24"
+default-features = false
+features = ["png", "jpeg"]
