--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ log = "0.4"
 wgpu = "0.17"
 pollster = "0.3"
 bytemuck = { version = "1.13", features = [ "derive" ] }
+anyhow = "1.0"
 
 [dependencies.image]
 version = "0.24"
