--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ wgpu = "0.17"
 pollster = "0.3"
 bytemuck = { version = "1.13", features = [ "derive" ] }
 anyhow = "1.0"
+glam = "0.24"
 
 [dependencies.image]
 version = "0.24"
