--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ pollster = "0.3"
 bytemuck = { version = "1.13", features = [ "derive" ] }
 anyhow = "1.0"
 glam = "0.24"
-future = "0.3"
+futures = "0.3.29"
 
 [dependencies.image]
 version = "0.24"
